--- a/index.html
+++ b/index.html
@@ -1,37 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Rock, Paper, Scissors</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/sherif.favicon"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Overpass:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Frontend Mentor | Rock, Paper, Scissors</title>
+  </head>
+  <body>
+    <div class="rules-backgroud-close">
+      <h1>RULES</h1>
+      <img src="images/image-rules-bonus.svg" alt="" />
+      <div class="close-rules-div">
+        <img class="close-rules" src="images/icon-close.svg" alt="" />
+      </div>
+    </div>
+    <main>
+      <div class="rules">
+        <div class="rules-header">
+          <h1>RULES</h1>
+          <img src="images/icon-close.svg" alt="" />
+        </div>
+        <img src="images/image-rules.svg" alt="" />
+      </div>
 
-  Score
-  Rules
+      <div class="header">
+        <div class="header-text">
+          <span>ROCK</span>
+          <span>PAPER</span>
+          <span>SCISSORS</span>
+          <span>LIZARD</span>
+          <span>SPOCK</span>
+        </div>
+        <div class="score-div">
+          <span>SCORE</span>
+          <span class="score">12</span>
+        </div>
+      </div>
 
-  You Picked
-  The House Picked
+      <div class="pentagon">
+        <div class="scissors-container">
+          <img src="images/icon-scissors.svg" alt="" class="scissors" />
+        </div>
+        <div class="spoke-container">
+          <img src="images/icon-spock.svg" alt="" class="spoke" />
+        </div>
+        <div class="paper-container">
+          <img src="images/icon-paper.svg" alt="" class="paper" />
+        </div>
+        <div class="lizard-container">
+          <img src="images/icon-lizard.svg" alt="" class="lizard" />
+        </div>
+        <div class="rock-container">
+          <img src="images/icon-rock.svg" alt="" class="rock" />
+        </div>
 
-  You Win
-  You Lose
+        <img src="images/bg-pentagon.svg" alt="" class="pentagon-img" />
+      </div>
 
-  Play Again
+      <div class="picked-page">
+        <div class="you-picked-page">
+          <div class="you-picked-containtainer">
+            <img src="images/icon-scissors.svg" alt="" class="picked-image" />
+          </div>
+          <span class="you-picked">YOU PICKED</span>
+        </div>
+        <div class="house-picked">
+          <div class="house-picked-container">
+            <!-- <img src="" alt="" class="house-picked-image" /> -->
+            <div></div>
+          </div>
+          <span class="house-picked">THE HOUSE PICKED</span>
+        </div>
+      </div>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+      <div class="you-result">
+        <span class="lose">YOU LOSE</span>
+        <button>PLAY AGAIN</button>
+      </div>
 
+      <div class="rules-btn">
+        <button>RULES</button>
+      </div>
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+        Coded by <a href="https://x.com/thesheriflawal">Sherif Lawal</a>
+      </div>
+    </main>
+
+    <script src="sandbox.js"></script>
+  </body>
 </html>
