--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
 
       <div class="you-result">
-        <span class="lose">YOU LOSE</span>
+        <span>YOU WIN</span>
         <button>PLAY AGAIN</button>
       </div>
 
@@ -111,6 +111,7 @@
       </div>
     </main>
 
+    <script src="game.js"></script>
     <script src="sandbox.js"></script>
   </body>
 </html>
