--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </div>
         </button>
         <button class="choice-btn" data-choice="scissors">
-          <div class="choice Scissors">
+          <div class="choice scissors">
             <img src="images/icon-scissors.svg" alt="Scissors" />
           </div>
         </button>
@@ -55,12 +55,27 @@
         </button>
       </section>
     </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Your Name Here</a>.
+
+    <button class="rules-btn" tabindex="1">rules</button>
+    <div class="modal">
+      <div class="modal_container">
+        <header class="modal_header">
+          <h2 class="modal_heading">rules</h2>
+          <button class="close-btn">
+            <img src="images/icon-close.svg" alt="close button" />
+          </button>
+        </header>
+        <img src="images/image-rules.svg" alt="rules image" />
+      </div>
     </div>
+    <footer class="footer">
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://x.com/thesheriflawal">Sherif Lawal</a>.
+      </div>
+    </footer>
 
     <script src="sandbox.js"></script>
   </body>
