--- a/index.html
+++ b/index.html
@@ -56,10 +56,14 @@
       </section>
     </div>
 
-    <section class="results">
+    <section class="results hidden">
       <h2 class="results-heading">you picked</h2>
       <h2 class="results-heading">the house picked</h2>
       <div class="results_result"></div>
+      <div class="results_winner hidden">
+        <h3 class="results_text"></h3>
+        <button class="play-again">play again</button>
+      </div>
       <div class="results_result"></div>
     </section>
 
