--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="images/logo.svg" alt="logo" />
         <div class="score">
           <div class="score_title">score</div>
-          <div class="score_number">12</div>
+          <div class="score_number">0</div>
         </div>
       </header>
       <section class="game">
@@ -57,8 +57,8 @@
     </div>
 
     <section class="results hidden">
-      <h2 class="results-heading">you picked</h2>
-      <h2 class="results-heading">the house picked</h2>
+      <h2 class="results_heading">you picked</h2>
+      <h2 class="results_heading">the house picked</h2>
       <div class="results_result"></div>
       <div class="results_winner hidden">
         <h3 class="results_text"></h3>
@@ -71,8 +71,8 @@
     <!-- <div class="modal-close"></div> -->
     <div class="modal">
       <div class="modal_container">
-        <header class="modal_header">
-          <h2 class="modal_heading">rules</h2>
+        <header class="modal-header">
+          <h2 class="modal-heading">rules</h2>
           <button class="close-btn">
             <img src="images/icon-close.svg" alt="close button" />
           </button>
